# network_python

.github/workflows/: homework.yml
lectures/01_lecture/: README.md  lecture.ipynb  requirements.txt
lectures/01_lecture/examples/01_sync/: 01_sequential.py  02_io_vs_cpu.py
lectures/01_lecture/examples/02_threading/: 01_simple_thread.py  02_thread_pool.py
lectures/01_lecture/examples/03_multiprocessing/: 02_cpu_bound.py
lectures/01_lecture/examples/04_asyncio/: 01_basic_coroutine.py  01_task_group.py  02_gather.py  02_timeouts.py  03_cancelation.py  03_tasks.py  04_as_completed.py  04_threading_and_asyncio.py
lectures/01_lecture/homework/: README.md  conftest.py  pyproject.toml
lectures/01_lecture/homework/01_threadpool/: task.py  test_threadpool.py
lectures/01_lecture/homework/02_race_condition/: task.py  test_race_condition.py
lectures/01_lecture/homework/03_multiprocessing/: task.py  test_multiprocessing.py
lectures/01_lecture/homework/04_asyncio/: task.py  test_asyncio.py
lectures/02_lecture/homework/01_bookstore/: task.py
lectures/02_lecture/homework/02_errors_and_tests/: task.py  test_errors.py
